Continue work on Advanced DMType Example

--- a/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -42,6 +42,7 @@
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
     "from s3m_dm import DMType\n",
+    "from s3m_meta import PartyType, AuditType, AttestationType\n",
     "from s3m_struct import ClusterType, XdAdapterType\n",
     "from s3m_xdt import XdStringType, XdTemporalType, XdOrdinalType, XdCountType, XdBooleanType, XdQuantityType, XdTemporalType, XdOrdinalType, XdFileType"
    ]
@@ -54,12 +55,12 @@
     }
    },
    "source": [
-    "Uncomment the line below to review the documentation of DMType. "
+    "Uncomment the line below and run the cell to review the documentation of DMType. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -73,19 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "US1040a = DMType(\"1040A for 2017\") # the outer wrapper\n",
     "tree = ClusterType('Data Tree Container')\n",
     "tree.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf'\n",
-    "tree.docs = \"The container for all data clusters created below.\""
+    "tree.docs = \"The container for all data clusters created below.\"\n",
+    "#tree.pred_obj_list = ('','')\n",
+    "subject = PartyType(\"Subject of the form\")\n",
+    "subject.docs = \"Contains the Personal Information section\"\n",
+    "subject.cardinality = ('party_details', [1,1])\n",
+    "#subject.pred_obj_list = ('','')\n",
+    "provider = PartyType(\"Service Provider\")\n",
+    "provider.docs = \"Contains the paid preparer section\"\n",
+    "provider.cardinality = ('party_details', [1,1])\n",
+    "#provider.pred_obj_list = ('','')\n",
+    "audit = AuditType(\"Audit of the form\")\n",
+    "audit.docs = \"Contains an audit of the form\"\n",
+    "#audit.pred_obj_list = ('','')\n",
+    "attestation = AttestationType(\"Attestation of the form\")\n",
+    "attestation.docs = \"Contains the signature section\"\n",
+    "#attestation.pred_obj_list = ('','')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,17 +388,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClusterType : Personal Information, ID: cjog2vq730005kubi6oo961om Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "print(pi)\n",
-    "tree.items = pi"
+    "subject.party_details = pi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClusterType : Filing Status, ID: cjog2vqcu0014kubi5oyzbs1k Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "fstatus = XdStringType(\"Filing Status Selection\")\n",
     "fstatus.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page16#status'\n",
@@ -425,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,9 +575,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClusterType : Dependents, ID: cjog2vqeo001ckubiisrxutwu Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "opt = {'trues':['Checked'], 'falses':['Unchecked']}\n",
     "d_qual = XdBooleanType('Qualifying Dependent', opt)\n",
@@ -563,9 +602,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClusterType : Exemptions, ID: cjog2vqdk0017kubi6c671bod Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "ex.items = dep # adding a cluster to a cluster\n",
     "ex.published = True\n",
@@ -575,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,9 +634,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdStringType : Currency, ID: cjog2vqh3001okubib0wf3rpx Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "# create the units model\n",
     "currency = XdStringType('Currency')\n",
@@ -607,9 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdQuantityType : Wages, salaries, tips, etc., ID: cjog2vqhh001qkubi8cagrjpi Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "wages = XdQuantityType(\"Wages, salaries, tips, etc.\")\n",
     "wages.docs = \"Wages, salaries, tips, etc. Attach Form(s) W-2.\"\n",
@@ -627,9 +690,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdQuantityType : Tax-exempt interest., ID: cjog2vqhr001skubiq8vf66hv Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "interest = XdQuantityType(\"Tax-exempt interest.\")\n",
     "interest.docs = \"Tax-exempt interest. Do not include on line 8a.\"\n",
@@ -647,9 +718,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdQuantityType : Tax-exempt interest., ID: cjog2vqi2001ukubi0oekt7oh Published: True\n"
+     ]
+    }
+   ],
    "source": [
     "te_interest = XdQuantityType(\"Tax-exempt interest.\")\n",
     "te_interest.docs = \"Tax-exempt interest. Do not include on line 8a.\"\n",
@@ -667,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,11 +791,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# build the components and a cluster for Paid preparer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DMType : 1040A for 2017, ID: cjog2wg45001xkubimofab7dn\n"
+     ]
+    }
+   ],
+   "source": [
+    "US1040a = DMType(\"1040A for 2017\") # the outer wrapper\n",
+    "print(US1040a)"
    ]
   }
  ],
